--- a/src/components/style/NoteBook.module.scss
+++ b/src/components/style/NoteBook.module.scss
@@ -3,3 +3,17 @@
   height: 100vh;
   width: 100vw;
 }
+
+.loader {
+  align-items: center;
+  color: #333;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  width: 100vw;
+
+  .loadingMsg {
+    margin: 2rem 0 10rem;
+  }
+}
