Added modals, Section titles and ability to delete last note of a section

--- a/src/components/style/AddButton.module.scss
+++ b/src/components/style/AddButton.module.scss
@@ -4,6 +4,7 @@
   border: none;
   border-top: 1px solid #999;
   color: #6200ee;
+  cursor: pointer;
   display: flex;
   font-size: 1.4rem;
   margin-top: auto;
