--- a/src/components/style/SectionList.module.scss
+++ b/src/components/style/SectionList.module.scss
@@ -1,8 +1,13 @@
-.sections {
+.sectionList {
   border-right: 1px solid #999;
   display: flex;
   flex-direction: column;
   width: 19rem;
+}
+
+.sections {
+  flex-grow: 1;
+  overflow-y: auto;
 }
 
 
