--- a/src/components/style/ListItem.module.scss
+++ b/src/components/style/ListItem.module.scss
@@ -1,50 +1,57 @@
-.item {
+.itemContainer {
   align-items: center;
-  cursor: pointer;
   display: flex;
-  flex-shrink: 0;
+  flex-direction: row;
   justify-content: space-between;
-  overflow: hidden;
-  padding: 1rem 1.2rem;
-  text-overflow: ellipsis;
   transition: background .05s;
-  white-space: nowrap;
 
   &:hover {
     background: #dedede;
 
     .edit {
-      display: inline;
-    }
-  }
-
-  .edit {
-    background: none;
-    border: none;
-    color: #c2c2c2;
-    display: none;
-    outline: none;
-    padding: 0;
-
-    &:hover {
-      color: #a4a4a4;
+      position: static;
+      opacity: 1;
     }
   }
 }
 
-.activeItem {
-  @extend .item;
+.activeItemContainer {
+  @extend .itemContainer;
   background: #ccc;
 
   &:hover {
     background: #ccc;
   }
+}
 
-  .edit {
-    color: #a4a4a4;
+.item {
+  align-items: center;
+  cursor: pointer;
+  display: block;
+  flex-shrink: 0;
+  justify-content: space-between;
+  overflow: hidden;
+  padding: 1rem .8rem 1rem 1.2rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 16.6rem;
+}
 
-    &:hover {
-      color: #7a7a7a;
-    }
-  }
+.pageItem {
+  @extend .item;
+  padding: 1rem 1.2rem;
+  width: 100%;
+}
+
+.edit {
+  align-items: center;
+  color: #a4a4a4;
+  cursor: pointer;
+  height: 1.6rem;
+  left: -9999px;
+  margin-right: .6rem;
+  opacity: 0;
+  position: absolute;
+  width: 16px;
+  transition: opacity .1s;
 }
