--- a/src/components/style/Modal.module.scss
+++ b/src/components/style/Modal.module.scss
@@ -10,7 +10,7 @@
   background-color: #fff;
   box-shadow: 0 0 10px 5px #7a7a7a;
   max-height: 80vh;
-  max-width: 40rem;
+  max-width: 60rem;
   outline: none;
   overflow-y: auto;
   padding: 3.2rem;
@@ -42,17 +42,28 @@
   transition: max-height .1s ease;
 }
 
-form {
-  input {
-    border: none;
-    border-bottom: 1px solid #666;
-    font-size: 1.6rem;
-    font-weight: 300;
-    min-width: 25rem;
-    outline: none;
-    padding-bottom: .6rem;
-    width: 100%;
-  }
+.titleForm {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+label {
+  font-size: 1.4rem;
+  margin-bottom: .6rem;
+  width: 100%;
+}
+
+.input {
+  border: none;
+  border-bottom: 1px solid #666;
+  flex-grow: 1;
+  font-size: 1.6rem;
+  margin-right: 1.6rem;
+  min-width: 25rem;
+  outline: none;
+  padding-bottom: .6rem;
 }
 
 .actions {
@@ -63,4 +74,17 @@ form {
   button {
     margin-left: 1.6rem;
   }
+}
+
+.additionalOptions {
+  display: flex;
+  flex-direction: column;
+  margin-top: 4rem;
+}
+
+.deleteSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 1.2rem;
 }
