--- a/src/components/style/AddLink.module.scss
+++ b/src/components/style/AddLink.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   font-size: 1.4rem;
   outline: none;
-  padding: 1rem .8rem 1rem 1.2rem;
+  padding: 1rem .8rem;
   text-align: left;
   width: 100%;
 
