--- a/src/components/style/AppSidebar.module.scss
+++ b/src/components/style/AppSidebar.module.scss
@@ -2,34 +2,14 @@
   border-right: 1px solid #999;
   display: flex;
   flex-direction: column;
-}
-
-.link {
-  cursor: pointer;
-  overflow: hidden;
-  padding: 1rem .8rem 1rem 1.2rem;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-
-  &:hover {
-    background: #dedede;
-  }
-}
-
-.activeLink {
-  @extend .link;
-  background: #ccc;
-
-  &:hover {
-    background: #ccc;
-  }
+  width: 20rem;
 }
 
 .sectionHeader {
   color: #a4a4a4;
   font-size: 1.1rem;
   font-weight: 600;
-  margin-top: 4rem;
-  padding: 1rem .8rem 1rem 1.2rem;
+  margin-top: 2rem;
+  padding: 1rem .8rem;
   text-transform: uppercase;
 }
