--- a/src/components/style/ListItem.module.scss
+++ b/src/components/style/ListItem.module.scss
@@ -1,5 +1,4 @@
-.itemContainer {
-  align-items: center;
+.item {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -7,16 +6,11 @@
 
   &:hover {
     background: #dedede;
-
-    .edit {
-      position: static;
-      opacity: 1;
-    }
   }
 }
 
-.activeItemContainer {
-  @extend .itemContainer;
+.activeItem {
+  @extend .item;
   background: #ccc;
 
   &:hover {
@@ -24,34 +18,29 @@
   }
 }
 
-.item {
+.title {
   align-items: center;
   cursor: pointer;
-  display: block;
+  display: flex;
+  flex-grow: 1;
   flex-shrink: 0;
-  justify-content: space-between;
+  font-size: 1.4rem;
   overflow: hidden;
-  padding: 1rem .8rem 1rem 1.2rem;
+  padding: 1rem .8rem;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 16.6rem;
-}
 
-.pageItem {
-  @extend .item;
-  padding: 1rem 1.2rem;
-  width: 100%;
-}
+  .icon {
+    color: #a4a4a4;
+    display: flex;
+    flex: 0 0 24px;
+  }
 
-.edit {
-  align-items: center;
-  color: #a4a4a4;
-  cursor: pointer;
-  height: 1.6rem;
-  left: -9999px;
-  margin-right: .6rem;
-  opacity: 0;
-  position: absolute;
-  width: 16px;
-  transition: opacity .1s;
+  input {
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    font-size: 1.4rem;
+    outline: none;
+    width: 100%;
+  }
 }
