--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ ol, ul {
   list-style-type: none;
 }
 
-button, input, textarea {
+button, input, textarea, select, option {
   font-family: 'Open Sans', Helvetica, sans-serif;
 }
 
