--- a/src/components/style/Search.module.scss
+++ b/src/components/style/Search.module.scss
@@ -2,12 +2,33 @@
   padding: .8rem;
 }
 
-.search {
+.searchField {
+  align-items: center;
+  background: #fff;
   border: 1px solid #ccc;
   border-radius: 3px;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 1.2rem;
+
+  button {
+    align-items: center;
+    background: #fff;
+    border: none;
+    color: #a4a4a4;
+    cursor: pointer;
+    display: flex;
+    flex: 0 0 1.6rem;
+    outline: none;
+    padding: 0;
+  }
+}
+
+.search {
+  border: none;
   font-size: 1.4rem;
   outline: none;
-  padding: 1rem 1.2rem;
+  padding: 0;
   width: 100%;
 }
 
