Added note sort

--- a/src/components/style/Search.module.scss
+++ b/src/components/style/Search.module.scss
@@ -1,12 +1,11 @@
 .container {
-  border-bottom: 1px solid #e5e5e5;
   padding: .8rem;
 }
 
 .searchField {
   align-items: center;
   background: #fff;
-  border: 1px solid #ccc;
+  border: 1px solid #c2c2c2;
   border-radius: 3px;
   display: flex;
   justify-content: space-between;
