--- a/src/components/style/SectionList.module.scss
+++ b/src/components/style/SectionList.module.scss
@@ -32,9 +32,9 @@
 
 .activeSection {
   @extend .section;
-  background: #ccc;
+  background: #c2c2c2;
 
   &:hover {
-    background: #ccc;
+    background: #c2c2c2;
   }
 }
