--- a/src/components/style/AddLink.module.scss
+++ b/src/components/style/AddLink.module.scss
@@ -24,7 +24,7 @@
   padding: 1rem .8rem;
   
   input {
-    border: 1px solid #ccc;
+    border: 1px solid #c2c2c2;
     border-radius: 3px;
     font-size: 1.6rem;
     max-width: 16rem;
