--- a/src/components/style/AppToolbar.module.scss
+++ b/src/components/style/AppToolbar.module.scss
@@ -11,6 +11,7 @@
     cursor: pointer;
     display: flex;
     flex: 0 0 3.6rem;
+    font-size: 1.8rem;
     margin: 0 .6rem;
     max-width: 3.6rem;
     outline: none;
