--- a/src/components/style/ListItem.module.scss
+++ b/src/components/style/ListItem.module.scss
@@ -10,10 +10,10 @@
 
 .activeItem {
   @extend .item;
-  background: #ccc;
+  background: #c2c2c2;
 
   &:hover {
-    background: #ccc;
+    background: #c2c2c2;
   }
 }
 
@@ -59,7 +59,7 @@
   }
 
   input {
-    border: 1px solid #ccc;
+    border: 1px solid #c2c2c2;
     border-radius: 3px;
     font-size: 1.4rem;
     outline: none;
