--- a/src/components/style/ListItem.module.scss
+++ b/src/components/style/ListItem.module.scss
@@ -1,24 +1,26 @@
+@import '../../styles/colors.scss';
+
 .item {
   cursor: pointer;
   display: flex;
   transition: background .05s;
 
   &:hover {
-    background: #dedede;
+    background: $gray200;
   }
 }
 
 .activeItem {
   @extend .item;
-  background: #c2c2c2;
+  background: $gray300;
 
   &:hover {
-    background: #c2c2c2;
+    background: $gray300;
   }
 }
 
 .borderbtm {
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid $gray200;
 }
 
 .titleContainer {
@@ -42,7 +44,7 @@
   font-size: 1.4rem;
 
   .icon {
-    color: #a4a4a4;
+    color: $text-secondary;
     display: flex;
     flex: 0 0 24px;
   }
@@ -59,7 +61,7 @@
   }
 
   input {
-    border: 1px solid #c2c2c2;
+    border: 1px solid $gray300;
     border-radius: 3px;
     font-size: 1.4rem;
     outline: none;
@@ -68,7 +70,7 @@
 }
 
 .menu {
-  color: #a4a4a4;
+  color: $text-secondary;
   cursor: pointer;
   display: flex;
   margin: 1rem 1rem 0 0;
@@ -78,7 +80,7 @@
 
 .category {
   align-items: center;
-  color: #a4a4a4;
+  color: $text-secondary;
   display: flex;
   font-size: 1.2rem;
   margin-top: .3rem;
