--- a/src/components/style/AppToolbar.module.scss
+++ b/src/components/style/AppToolbar.module.scss
@@ -1,13 +1,15 @@
+@import '../../styles/colors.scss';
+
 .toolbar {
   display: flex;
   padding: .8rem 0.2rem;
 
   button {
     align-items: center;
-    background: #dedede;
+    background: $gray300;
     border: none;
     border-radius: 3px;
-    color: #333;
+    color: $text;
     cursor: pointer;
     display: flex;
     flex: 0 0 3.6rem;
@@ -18,7 +20,7 @@
     padding: .9rem;
 
     &:hover {
-      background: #6200ee;
+      background: $primary-light;
       color: #fff;
     }
   }
