--- a/src/components/style/Modal.module.scss
+++ b/src/components/style/Modal.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors.scss';
+
 .overlay {
   position: fixed;
   top: 0px;
@@ -8,110 +10,9 @@
 
 .modal {
   background-color: #fff;
-  box-shadow: 0 0 10px 5px #7a7a7a;
+  box-shadow: 0 0 10px 5px $gray600;
   max-height: 80vh;
-  max-width: 60rem;
   outline: none;
   overflow-y: auto;
   padding: 3.2rem;
-}
-
-.modalWithClose {
-  @extend .modal;
-  padding-top: 1.2rem;
-}
-
-.close {
-  color: #a4a4a4;
-  cursor: pointer;
-  margin-left: auto;
-  margin-right: -2rem;
-  width: 2.4rem;
-}
-
-.title {
-  font-size: 2.4rem;
-  margin: 0 0 3rem 0;
-}
-
-.body {
-  font-size: 1.6rem;
-  max-height: 1000px;
-  transition: max-height .2s ease;
-
-  p {
-    margin:0 0 1.2rem 0;
-  }
-
-  ul {
-    margin:0 0 1.2rem 0;
-    padding-left: 1.8rem;
-  }
-}
-
-.hidden {
-  margin-bottom: 0;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height .1s ease;
-}
-
-.titleForm {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-label {
-  font-size: 1.4rem;
-  margin-bottom: .6rem;
-  width: 100%;
-}
-
-.input {
-  border: none;
-  border-bottom: 1px solid #666;
-  flex-grow: 1;
-  font-size: 1.6rem;
-  margin-right: 1.6rem;
-  min-width: 25rem;
-  outline: none;
-  padding-bottom: .6rem;
-}
-
-.saveAction {
-  text-align: center;
-  width: 6rem;
-
-  svg {
-    margin: 0 auto;
-  }
-}
-
-.actions {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 3.2rem;
-
-  button {
-    margin-left: 1.6rem;
-  }
-}
-
-.additionalOptions {
-  display: flex;
-  flex-direction: column;
-  margin-top: 4rem;
-}
-
-.deleteSection {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 1.2rem;
-}
-
-.warning {
-  color: #cc1d33;
 }
