--- a/src/components/style/NoteBook.module.scss
+++ b/src/components/style/NoteBook.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/colors.scss';
+
 .notebook {
   display: flex;
   height: 100vh;
@@ -6,7 +8,7 @@
 
 .loader {
   align-items: center;
-  color: #333;
+  color: $text;
   display: flex;
   flex-direction: column;
   height: 100vh;
