Added dark theme and dark mode toggle

--- a/src/components/style/AddSection.module.scss
+++ b/src/components/style/AddSection.module.scss
@@ -1,10 +1,8 @@
-@import '../../styles/colors.scss';
-
 .add {
   align-items: center;
   background: none;
   border: none;
-  color: $text-secondary;
+  color: var(--text-secondary);
   cursor: pointer;
   display: flex;
   font-size: 1.4rem;
@@ -14,7 +12,7 @@
   width: 100%;
 
   &:hover {
-    color: $primary-light;
+    color: var(--primary-light);
   }
 
   svg {
@@ -26,7 +24,7 @@
   padding: 1rem .8rem;
   
   input {
-    border: 1px solid $gray400;
+    border: 1px solid var(--sidebar-borders);
     border-radius: 3px;
     font-size: 1.6rem;
     max-width: 16rem;
@@ -37,7 +35,7 @@
 }
 
 .error {
-  color: $error;
+  color: var(--error);
   display: block;
   font-size: 1.3rem;
   padding: 1rem .8rem;
