--- a/src/components/style/AppSidebar.module.scss
+++ b/src/components/style/AppSidebar.module.scss
@@ -1,5 +1,5 @@
 .sidebar {
-  border-right: 1px solid #999;
+  border-right: 1px solid var(--sidebar-borders);
   display: flex;
   flex-direction: column;
   overflow-y: hidden;
