--- a/src/components/style/AppToolbar.module.scss
+++ b/src/components/style/AppToolbar.module.scss
@@ -1,15 +1,13 @@
-@import '../../styles/colors.scss';
-
 .toolbar {
   display: flex;
   padding: .8rem 0.2rem;
 
   button {
     align-items: center;
-    background: $gray300;
+    background: var(--toolbar-button-bg);
     border: none;
     border-radius: 3px;
-    color: $text;
+    color: var(--text);
     cursor: pointer;
     display: flex;
     flex: 0 0 3.6rem;
@@ -20,7 +18,7 @@
     padding: .9rem;
 
     &:hover {
-      background: $primary-light;
+      background: var(--primary-light);
       color: #fff;
     }
   }
