--- a/src/components/style/NoteBook.module.scss
+++ b/src/components/style/NoteBook.module.scss
@@ -1,6 +1,5 @@
-@import '../../styles/colors.scss';
-
 .notebook {
+  color: var(--text);
   display: flex;
   height: 100vh;
   width: 100vw;
@@ -8,7 +7,7 @@
 
 .loader {
   align-items: center;
-  color: $text;
+  color: var(--text);
   display: flex;
   flex-direction: column;
   height: 100vh;
