--- a/src/components/style/Search.module.scss
+++ b/src/components/style/Search.module.scss
@@ -1,23 +1,26 @@
-@import '../../styles/colors.scss';
-
 .container {
   padding: .8rem;
 }
 
 .searchField {
   align-items: center;
-  background: #fff;
-  border: 1px solid $gray400;
+  background: var(--search-bg);
+  border: 1px solid var(--sidebar-borders);
   border-radius: 3px;
   display: flex;
   justify-content: space-between;
   padding: 1rem 1.2rem;
 
+  input {
+    background: var(--search-bg);
+    color: var(--text);
+  }
+
   button {
     align-items: center;
     background: #fff;
     border: none;
-    color: $text-secondary;
+    color: var(--text-secondary);
     cursor: pointer;
     display: flex;
     flex: 0 0 1.6rem;
@@ -35,7 +38,7 @@
 }
 
 .message {
-  color: $text-secondary;
+  color: var(--text-secondary);
   font-size: 1.2rem;
   height: 1.8rem;
   padding: 0 1.2rem;
