--- a/src/components/style/SettingsModal.module.scss
+++ b/src/components/style/SettingsModal.module.scss
@@ -1,5 +1,3 @@
-@import '../../styles/colors.scss';
-
 .header {
   align-items: center;
   display: flex;
@@ -17,14 +15,14 @@
 
   .close {
     align-items: center;
-    color: $text-secondary;
+    color: var(--text-secondary);
     cursor: pointer;
     display: flex;
     font-size: 2.4rem;
     padding: .4rem;
 
     &:hover {
-      background: $gray300;
+      background: var(--settings-hover);
     }
   }
 }
@@ -53,14 +51,14 @@
   }
 
   .email {
-    color: $text-secondary;
+    color: var(--text-secondary);
     margin-top: .6rem;
   }
 }
 
 .photo {
   align-items: center;
-  background: $gray300;
+  background: var(--settings-photo);
   border-radius: 8px;
   display: flex;
   height: 10rem;
