--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -21,7 +21,7 @@
   --text: rgba(0, 0, 0, 0.87);
   --text-secondary: rgba(0, 0, 0, 0.54);
   --text-disabled: rgba(0, 0, 0, 0.38);
-  
+  --on-error: rgba(255, 255, 255, 0.87);
   
   --surface: #ffffff;
   --page-sidebar: #e8e8e8;
@@ -73,6 +73,7 @@
   --text: rgba(255, 255, 255, 0.87);
   --text-secondary: rgba(255, 255, 255, 0.54);
   --text-disabled: rgba(255, 255, 255, 0.38);
+  --on-error: rgba(0, 0, 0, 0.87);
   
   --surface: #121212;
   --page-sidebar: #272727;
