--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -37,6 +37,8 @@
   --settings-bg: #fff;
   --settings-hover: #ebebeb;
   --settings-photo: #e3e3e3;
+  --modal-bg: #fff;
+  --modal-shadow: #7a7a7a;
   
   // surface: #ffffff;
   // surface01dp: #f2f2f2;
@@ -84,11 +86,13 @@
   --item-active-bg: #333333;
   --toolbar-button-bg: #2f2f2f;
   --dropdown-bg: #2f2f2f;
-  --dropdown-select: #353535;
-  --dropdown-hover: #353535;
+  --dropdown-select: #383838;
+  --dropdown-hover: #383838;
   --settings-bg: #353535;
   --settings-hover: #2c2c2c;
   --settings-photo: #333333;
+  --modal-bg: #353535;
+  --modal-shadow: #121212;
 
   
   // surface: #121212;
