--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -24,8 +24,8 @@
   --on-error: rgba(255, 255, 255, 0.87);
   
   --surface: #ffffff;
-  --page-sidebar: #e8e8e8;
   --app-sidebar:#ebebeb;
+  --page-sidebar: #e8e8e8;
   --sidebar-borders: #e0e0e0;
   --search-bg: #fff;
   --item-hover-bg: #e0e0e0;
@@ -34,11 +34,10 @@
   --dropdown-bg: #ffffff;
   --dropdown-select: #ffffff;
   --dropdown-hover: #ededed;
-  --settings-bg: #fff;
-  --settings-hover: #ebebeb;
-  --settings-photo: #e3e3e3;
   --modal-bg: #fff;
   --modal-shadow: #7a7a7a;
+  --settings-hover: #ebebeb;
+  --settings-photo: #e3e3e3;
   
   // surface: #ffffff;
   // surface01dp: #f2f2f2;
@@ -78,21 +77,20 @@
   --on-error: rgba(0, 0, 0, 0.87);
   
   --surface: #121212;
-  --page-sidebar: #272727;
-  --app-sidebar: #252525;
-  --sidebar-borders: #2f2f2f;
+  --app-sidebar: #1e1e1e;
+  --page-sidebar: #252525;
+  --sidebar-borders: #1e1e1e;
   --search-bg: #1e1e1e;
-  --item-hover-bg: #2f2f2f;
-  --item-active-bg: #333333;
+  --item-hover-bg: #2c2c2c;
+  --item-active-bg: #2f2f2f;
   --toolbar-button-bg: #2f2f2f;
   --dropdown-bg: #2f2f2f;
   --dropdown-select: #383838;
   --dropdown-hover: #383838;
-  --settings-bg: #353535;
-  --settings-hover: #2c2c2c;
-  --settings-photo: #333333;
   --modal-bg: #353535;
   --modal-shadow: #121212;
+  --settings-hover: #383838;
+  --settings-photo: #383838;
 
   
   // surface: #121212;
