--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -60,3 +60,23 @@ img {
 .MuiPaper-root {
   background-color: transparent !important;
 }
+
+// Scrollbars
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  width: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
