--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -21,7 +21,8 @@
   --text: rgba(0, 0, 0, 0.87);
   --text-secondary: rgba(0, 0, 0, 0.54);
   --text-disabled: rgba(0, 0, 0, 0.38);
-  --on-error: rgba(255, 255, 255, 0.87);
+  --on-dark: rgba(255, 255, 255, 0.87);
+  --on-dark-hover: #fff;
   
   --surface: #ffffff;
   --app-sidebar:#ebebeb;
@@ -38,6 +39,9 @@
   --modal-shadow: #7a7a7a;
   --settings-hover: #ebebeb;
   --settings-photo: #e3e3e3;
+  --login-bg: #f2f2f2;
+  --login-header: #e0e0e0;
+  --google: #4285f4;
   
   // surface: #ffffff;
   // surface01dp: #f2f2f2;
