--- a/src/components/style/Login.module.scss
+++ b/src/components/style/Login.module.scss
@@ -38,12 +38,12 @@
   align-items: center;
   background-color: var(--google);
   border: none;
-  box-shadow: none;
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.25);
   cursor: pointer;
   display: flex;
   outline: none;
   padding: 1px;
-  transition: box-shadow .218s;
+  transition: box-shadow .2s;
 
   .logo {
     align-items: center;
@@ -63,7 +63,7 @@
   }
 
   &:hover {
-    box-shadow: 0 0 3px 3px var(--text-secondary);
+    box-shadow: 0 0 3px 3px rgba(66,133,244,.3);
   }
 }
 
