--- a/src/components/style/PageListTools.module.scss
+++ b/src/components/style/PageListTools.module.scss
@@ -41,7 +41,11 @@ ul.menu {
     }
 
     &:hover {
-      background: #ededed;
+      background: var(--dropdown-hover);
     }
   }
+}
+
+.test {
+  color: red
 }
