--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 html {
   box-sizing: border-box;
@@ -64,17 +65,18 @@ img {
 // Scrollbars
 
 ::-webkit-scrollbar {
-  width: 10px;
+  cursor: pointer;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-track {
   background: transparent;
-  width: 20px;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-thumb {
   background: #888;
-  width: 10px;
+  width: 6px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
