--- a/src/components/style/Login.module.scss
+++ b/src/components/style/Login.module.scss
@@ -1,8 +1,6 @@
 .login {
   background: var(--login-bg);
   color: var(--text);
-  height: 100vh;
-  width: 100vw;
 }
 
 
@@ -17,7 +15,7 @@
   .container {
     display: flex;
     justify-content: space-between;
-    padding: 2rem 0;
+    padding: 2rem 1.2rem;
   }
 
   h1 {
@@ -68,13 +66,18 @@
 }
 
 .mainContent {
+  .container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+  }
 
   h2 {
-    font-size: 4.8rem;
+    font-size: 3.2rem;
     font-weight: 600;
-    line-height: 5.6rem;
     margin-top: 6rem;
-    max-width: 50rem;
+    max-width: 30rem;
     padding: 0;
     text-align: center;
   }
@@ -93,13 +96,6 @@
 
   .demo {
     margin: 4rem 0;
-  }
-
-  .container {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    padding: 2rem 0;
   }
 }
 
@@ -134,6 +130,20 @@
       &:hover {
         color: var(--on-dark-hover);
       }
+    }
+  }
+}
+
+@media (min-width: 769px) {
+  .mainContent {
+    .container {
+      padding: 2rem 1.2rem;
+    }
+
+    h2 {
+      font-size: 4.8rem;
+      line-height: 5.6rem;
+      max-width: 50rem;
     }
   }
 }
